# anamnesis

./: .gitignore  .mcp.json  AGENT_MEMORY.md  PLAN.md  README.md  pyproject.toml
adapters/claude_code/: mcp_server.py
api/: deps.py  main.py
api/routes/: entries.py  goals.py  metrics.py  rollups.py
core/: classify.py  memory_store.py  migrate.py  models.py  provider_config.py  review.py  rollup.py  schema.sql
frontend/: dashboard.html  index.html  review.html
frontend/css/: style.css
frontend/js/: api.js  charts.js  entries.js  review.js
scripts/: review_rollups.py
tests/: test_api.py  test_classify.py  test_dashboard.py  test_frontend_mount.py  test_integration_week.py  test_mcp_server.py  test_memory_store.py  test_migrate.py  test_provider_config.py  test_review.py  test_review_ui.py  test_rollup.py  test_rollup_error_handling.py
