[project]
name = "anamnesis"
version = "0.1.0"
description = "Tiered agent memory for personal health tracking"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["core", "adapters", "adapters.claude_code", "api", "api.routes"]
